# todo-console-phase2

./: .gitignore  README.md  db_setup.py  db_setup_clean.py  db_setup_simple.py  db_setup_windows.py  db_update_tables.py  index.html  package-lock.json  pyproject.toml  requirements.txt  test_db.py  tmpclaude-0c21-cwd
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
404/: index.html
_next/static/css/: 710d5ac95fed6943.css
_next/static/eqjsCKl3qKCcYl1wZV0jT/: _buildManifest.js
backend/: api.py  pyproject.toml  requirements.txt  tmpclaude-c4a3-cwd  vercel.json
backend/src/: config.py
backend/src/api/: main.py
backend/src/api/routes/: auth.py  todos.py
backend/src/database/: connection.py
backend/src/middleware/: auth.py
backend/src/models/: todo.py  user.py
backend/src/services/: auth_service.py  todo_service.py
backend/src/utils/: exceptions.py
dashboard/: index.html
dashboard/create/: index.html
dashboard/edit/: index.html
docs/: quickstart.md
frontend/: .env.production  next.config.js  package-lock.json  package.json  tmpclaude-a19b-cwd  tsconfig.tsbuildinfo
frontend/src/hooks/: useAuth.ts  useAuth.tsx
frontend/src/pages/: index.tsx  signin.tsx  signup.tsx
frontend/src/services/: api.ts
history/prompts/001-medtrack-todo/: 2-create-medtrack-spec.spec.prompt.md  3-update-medtrack-spec.spec.prompt.md  4-create-medtrack-plan.plan.prompt.md  5-create-medtrack-tasks.tasks.prompt.md  (+1 more)
signin/: index.html
signup/: index.html
specs/001-medtrack-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/medtrack_todo/: __init__.py  constants.py  main.py
todo-app/: .gitignore  spec-kit-instructions.md
todo-app/todo-console-app/: README.md  pyproject.toml
todo-app/todo-console-app/src/todo_app/: main.py  manager.py  models.py  ui.py
todo-app/todo-console-app/tests/: test_manager.py
(+50 files in other folders)
