[project]
name = "todo-backend"
version = "0.1.0"
description = "Todo API backend with FastAPI"
authors = [
    {name = "Ashfa Shakeel", email = "ash-codiology@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "better-exceptions>=0.3.3"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"